# simple_animation_engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  animation.cpp  animation.hpp  animation_engine.cpp  animation_refresh_mechanism.hpp  animation_regresh_mechanism.cpp  animation_text.cpp  animation_texture.cpp  cmake_install.cmake  main.cpp  regression.cpp  vim
cppcheck/: Gioco.cppcheck
